--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,22 +1,21 @@
 ---
 ---
 
-@import "jekyll-theme-minimal";
+@import "{{ site.theme }}";
 
-<style>
-	.info-toggle {
-		display: none;
-	}
-	.info-content {
-		display: none;
-	}
-	.info-toggle:checked + .info-content {
-		display: block;
-	}
-	.info-label {
-		color: #267CB9;
-		cursor: pointer;
-		text-decoration: underline;
-	}
 
-</style>
+.info-toggle {
+	display: none;
+}
+.info-content {
+	display: none;
+}
+.info-toggle:checked + .info-content {
+	display: block;
+}
+.info-label {
+	color: #267CB9;
+	cursor: pointer;
+	text-decoration: underline;
+}
+
