--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -121,6 +121,9 @@ header {
   width:270px;
   float:left;
   position:fixed;
+  top: 0;
+  bottom: 0;
+  overflow-y: auto;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
