--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header style="overflow-y: auto;">
+      <header style="overflow-y: auto; position: static;">
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
